# FamilyTasks

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  TZ_TG_BOT.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.cursor/rules/: always-include-version-file.mdc
.github/workflows/: ci.yml  deploy.yml
docs/: ALICE_INTEGRATION.md  DEPLOY.md  GITHUB_FIRST_PUSH.md
scripts/: deploy-vps.ps1  fetch-vps-logs.ps1  first-push-github.ps1  setup-deploy-user.sh
src/family_tasks_bot/: __init__.py  config.py  deps.py  main.py  scheduler.py  states.py  version.py
src/family_tasks_bot/db/: database.py  migrations.py  repositories.py  schema.sql
src/family_tasks_bot/db/repository_modules/: __init__.py  family_repository.py  notification_repository.py  planned_task_repository.py  (+2 more)
src/family_tasks_bot/handlers/: __init__.py  common.py  family.py  misc.py  start.py  tasks.py
src/family_tasks_bot/keyboards/: inline.py  reply.py  stats_inline.py  tasks_inline.py
src/family_tasks_bot/models/: enums.py
src/family_tasks_bot/presenters/: stats_presenter.py  tasks_presenter.py
src/family_tasks_bot/services/: alice.py  auth.py  bootstrap.py  notifications.py
src/family_tasks_bot/utils/: bot_data.py  datetime_localization.py  validators.py
tests/: test_alice_service.py  test_manual_completion_helpers.py  test_migrations.py  test_misc_history_edit_ui.py  test_misc_weekly_nav.py  test_repositories.py  test_router_integration.py  test_structure_contracts.py  test_timezone_and_dependencies.py  test_validators.py
(+9 files in other folders)
