[project]
name = "family-tasks-bot"
version = "0.1.0"
description = "Telegram bot for family household task tracking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"family_tasks_bot" = ["db/*.sql"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
